@@ -18,6 +18,10 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-11-13  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/alpha/aorslsh1_n.asm: New file.
+
 2003-11-12  Kevin Ryde  <kevin@swox.se>
 
 	* acinclude.m4 (GMP_PROG_CC_WORKS): Add case provoking AIX power2
